<resources>
    <string name="app_name">DkHospitalRecords</string>
    <string name="login">LOGIN</string>
    <string name="usermail">email</string>
    <string name="user_password">Password</string>
    <string name="no_account">Don\'t have account, Signup?</string>
    <string name="signup">SIGNUP?</string>
    <string name="signup_2">SIGNUP</string>
    <string name="surname">Surname</string>
    <string name="other_names">Other Names</string>
    <string name="register">REGISTER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <string name="marital_status">Marital Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="widowed">Widowed</string>
    <string name="divorced">Divorced</string>
    <string name="age">Age</string>
    <string name="height">Heigh/feet</string>
    <string name="weight">Weight</string>
    <string name="address">Address</string>
    <string name="dk_hospital_records">DK Hospital Records</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Medication</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_appoints">Appointment</string>
    <string name="no_internet_connected">No Internet connected !</string>
    <string name="settings">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nat_id">National ID</string>
    <string name="phone">Phone Number</string>
    <string name="blood_group">Blood Group</string>
</resources>
